app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */

@import "bootstrap";

@font-face{
	font-family:'Verlag';
	src: font-url('Verlag-Book.eot');
		src:font-url('Verlag-Book.eot');
		src:font-url('Verlag-Book.eot?#iefix') format('embedded-opentype'),
			font-url('Verlag-Book.woff') format('woff'),
			font-url('Verlag-Book.ttf') format('truetype'),
			font-url('Verlag-Book.svg#Verlag-Book') format('svg');
	font-weight:normal;
	font-style:normal;
}

@font-face{
	font-family:'Verlag';
	src: font-url('Verlag-Black.eot');
		src:font-url('Verlag-Black.eot');
		src:font-url('Verlag-Black.eot?#iefix') format('embedded-opentype'),
			font-url('Verlag-Black.woff') format('woff'),
			font-url('Verlag-Black.ttf') format('truetype'),
			font-url('Verlag-Bold.svg#Verlag-Bold') format('svg');
	font-weight:bold;
	font-style:normal;
}

$lightgray: #E6E8E7;
$lightblue: #879AAC;
$darkblue: #3F4C58;
$verydarkblue: #2A2E32;

body {
	background-color: $lightgray;
	font-family: "verlag";
	font-weight: 500;
	font-size: 1.2em;
	color: $darkblue;
	padding-bottom: 72px;
}
h1, h2, h3, h4, h5, h6, p, label, a.shot-list-link  {
	color: $darkblue;
}
h1, h2, h3, h4, h5, h6, a.shot-list-link {
	font-weight: bold;
}
h2#shot-name, a.shot-list-link {
	margin-bottom: 0.6rem;
	font-size:2.4rem;
	margin-top: 0.4rem;
	line-height: 48px;
}
h6#created {
	text-transform:uppercase;
	font-size: 0.8rem;
	margin-bottom: 1.4rem;
	margin-top: 0;
}
ul#shot-list li:first-child {
	margin-top: 6px;
}
ul#shot-list > li {
	margin-bottom: 36px;
}
ul#shot-list {
	padding-bottom: 8px !important;
}
span#time-ago {
	text-transform:lowercase;
}
a {
	color: $lightblue;
}
a:hover {
	color: $darkblue;
	text-decoration:none;
}
a.navbar-brand {
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 0.1em;
	font-size:1.4em;
	color: $darkblue;
	margin-top:7px;
}
a.nav-link {
	margin-top:12px;
}
nav.navbar {
	padding-left: 0;
	margin-bottom: 24px;
}
input[type="text"] {
	outline: none;
	border: 0;
	border-bottom: 2px solid $lightblue;
	width: 100%;
	font-size: 1.8em;
	font-weight: 600;
	color: $darkblue;
	border-radius: 0;
	padding-left: 0;
	padding-bottom: 0;
}
.shot-field {
	margin-bottom: 2em;
}
label, h6#shot-page-title {
	font-weight:800;
	letter-spacing: 0.2em;
	margin-bottom:0;
	text-transform: uppercase;
	color: $lightblue;
}
label[for=shot_name] {
	font-size:0.8em;
	margin-bottom: 6px;
}
h6#shot-page-title {
	font-size:0.8em;
	margin-top: 4px;
	padding-bottom: 14px;
}
label[for^=shot_links], label[for^=shot_published] {
	font-size:0.6em;
	margin-bottom: 0;
	font-weight:600px;
}
input#shot_name {
	font-size:2em;
	margin-bottom:25px;
}
input[id^=shot_links] {
	font-size:1em;
	line-height:1em;
	margin-bottom:17px;
	border-bottom-width: 1px;
}
div.shot-link-field {
	margin-bottom: 24px;
}
input[type="submit"], a.add_fields, a.edit-link-list {
	letter-spacing: 0.1em;
	text-transform: uppercase;
	font-size:0.8em;
	font-weight:600;
	border-radius: 2px;
	padding:11px 14px 9px 14px;
	border: 2px solid $darkblue;
	line-height: 0.8em;
	height: auto;
}
a.add_fields, a.edit-link-list {
	color: $darkblue;
	background-color: none;
}
input[type="submit"] {
	background-color: $darkblue;
	color: $lightgray;
	height: 39px;
	margin-left: 12px;
}
input[type="submit"]:hover {
	cursor:pointer;
}
input[type="checkbox"] {
	margin-right:4px;
}
div.publish-action {
	float:left;
	margin-top:12px;
}
div.submit-action {
	float:right;
	margin-top:6px;
}
a.remove_fields {
	float:right;
	font-weight:600;
	letter-spacing: 0.15em;
	margin-bottom:0;
	text-transform: uppercase;
	font-size:0.6em;
	margin-top: 7px;
}
div.links {
	clear:both;
}
div.links > div.nested-fields {
	margin-bottom:60px;
}
div.main {
	background-color: #fff;
	padding:66px 24px;
	box-shadow: 0px 0px 8px rgba(63,76,88,0.2);
	border-radius: 2px;
}
img.avatar {
	height: 24px;
	width: 24px;
	margin-right: 4px;
	margin-bottom:3px;
	border-radius: 3px;
}
img#small-avatar {
	height: 20px;
	width: 20px;
	margin-bottom:0;
}
ul.link-list, ul#shot-list {
	list-style-type: none;	
	padding:0;
	margin-left: 0;
	margin-bottom:44px;
}

ul.link-list > li {
	margin-bottom:8px;
}
form {
	margin-top: 10px;
}
div.mobile-signin {
	display:none;
}
p.no-shots-yet {
	line-height: 1.5rem;
	margin-bottom: 3.6rem;
}
div#error_explanation {
	ul {
		list-style-type:none;
		padding-left: 0;
	}
}
img.logo {
	height:34px;
	width:34px;
}
a.navbar-brand {
	img.logo, h4 {
		float:left;
	}
	h4 {
		margin-left: 10px;
		margin-top: 4px;
	}
}

@media (max-width: 575.98px) { 
	a.navbar-brand {
		margin: 0 auto;
		font-size: 1rem;
		padding: 1px 0 0 0;
	}
	ul.navbar-nav {
		display:none;
	}
	div.main {
		box-shadow: none;
		padding-top: 38px;
		padding-bottom: 38px;
	}
	nav.navbar {
		margin-bottom: 0px;
		padding: 18px 0 12px 0;
	}
	h2#shot-name, a.shot-list-link {
		font-size: 2rem;
		line-height: 2.3rem;
		margin-bottom: 0.9rem;
	}
	ul#shot-list > li {
		margin-bottom: 35px;
	}
	h6#shot-page-title {
		margin-top: 9px;
		margin-bottom: 12px;
	}
	ul.link-list, ul#shot-list {
		margin-bottom: 48px;
	}
	form {
		margin-top: 3px;
	}
	label[for=shot_name] {
		margin-bottom: 1px;
	}
	input#shot_name {
		font-size: 1.3em;
	}
	div.shot-field {
		margin-bottom: 0.9rem;
	}
	div.publish-action {
		margin-bottom: 20px;
	}
	div.mobile-signin {
		display: block;
		text-align: center;
		font-size: 1rem;
		div {
			p {
				margin-bottom: 1.1rem;
			}
		}
	}
}

